--- a/example/build.gradle
+++ b/example/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.vimeo.android.vimdeeplinkandroidexample"
+        applicationId "com.vimeo.android.deeplink.example"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
