--- a/example/build.gradle
+++ b/example/build.gradle
@@ -21,5 +21,5 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:23.0.1'
-    compile project(':library')
+    compile project(':vimeo-deeplink')
 }
