--- a/vimeo-deeplink/build.gradle
+++ b/vimeo-deeplink/build.gradle
@@ -33,7 +33,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 25
         versionCode 3
-        versionName "1.2.0"
+        versionName libraryVersion
     }
     buildTypes {
         release {
@@ -44,6 +44,7 @@ android {
 }
 
 dependencies {
+    compile 'com.android.support:support-annotations:25.1.0'
 }
 
 apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
